# crewAI

CrewAI_agent/CrewAI_Competitive_Insights_Flask_Cloud_Deployment/: app.yaml  main.py  requirements.txt
CrewAI_agent/CrewAI_Competitive_Insights_Github_Deployment/: README.md  pyproject.toml
CrewAI_agent/CrewAI_Competitive_Insights_Github_Deployment/src/competitive_insights_generator/: crew.py  main.py
