[project]
name = "competitive_insights_generator"
version = "0.1.0"
description = "competitive-insights-generator using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
competitive_insights_generator = "competitive_insights_generator.main:run"
run_crew = "competitive_insights_generator.main:run"
train = "competitive_insights_generator.main:train"
replay = "competitive_insights_generator.main:replay"
test = "competitive_insights_generator.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
